--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build": "yarn run remove && yarn run build:client",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "build1": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev2": "cross-env NODE_ENV=development webpack-dev-server webpack.config.js"
+    "remove": "rimraf dist"
   },
   "keywords": [],
   "author": "",
@@ -31,11 +31,13 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.7",
     "postcss-loader": "^2.1.2",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.1",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
