--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "remove": "rimraf dist",
     "hint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "hint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
-    "precommit": "yarn run hint-fix"
+    "precommit": "yarn run hint-fix",
+    "hint-fix-build": "eslint --fix --ext .js build/",
+    "practice": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.practice.js"
   },
   "keywords": [],
   "author": "",
