--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
