--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "ejs": "^2.5.8",
+    "koa": "^2.5.0",
+    "koa-router": "^7.4.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
@@ -48,6 +52,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.14.3",
+    "memory-fs": "^0.4.1",
     "postcss-loader": "^2.1.2",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
