--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.server.js",
     "build": "yarn run remove && yarn run build:client && yarn run build:server",
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "remove": "rimraf dist && rimraf server-build",
+    "remove": "rimraf public && rimraf server-build",
     "hint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "hint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "precommit": "yarn run hint-fix",
     "hint-fix-build": "eslint --fix --ext .js build/",
     "practice": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.practice.js",
-    "dev:server": "nodemon server/app.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:server": "cross-env NODE_ENV=development node server/app.js",
     "dev": "concurrently \"yarn run dev:client\" \"yarn run dev:server\""
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
+    "sha1": "^1.1.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
