--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "practice": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.practice.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "cross-env NODE_ENV=development node server/app.js",
-    "dev": "concurrently \"yarn run dev:client\" \"yarn run dev:server\""
+    "dev": "concurrently \"yarn run dev:client\" \"yarn run dev:server\" \"node server/api/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
+    "koa2-cors": "^2.0.5",
     "sha1": "^1.1.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
