--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.18.0",
     "ejs": "^2.5.8",
     "koa": "^2.5.0",
+    "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
     "koa2-cors": "^2.0.5",
