--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "hint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "precommit": "yarn run hint-fix",
     "hint-fix-build": "eslint --fix --ext .js build/",
-    "practice": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.practice.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/app.js",
-    "dev": "concurrently \"yarn run dev:client\" \"yarn run dev:server\" \"node server/api/app.js\""
+    "dev:server": "cross-env NODE_ENV=development nodemon server/app.js",
+    "dev": "concurrently \"yarn run dev:client\" \"yarn run dev:server\""
   },
   "keywords": [],
   "author": "",
@@ -28,9 +27,9 @@
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
-    "koa2-cors": "^2.0.5",
     "sha1": "^1.1.1",
     "vue": "^2.5.16",
+    "vue-meta": "^1.5.0",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
     "vuex": "^3.0.1"
@@ -60,6 +59,7 @@
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.14.3",
     "memory-fs": "^0.4.1",
+    "nodemon": "^1.17.4",
     "postcss-loader": "^2.1.2",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
