--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.14.3",
+    "jsdoc": "^3.5.5",
     "memory-fs": "^0.4.1",
     "nodemon": "^1.17.4",
     "postcss-loader": "^2.1.2",
