--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.server.js",
     "build": "yarn run remove && yarn run build:client && yarn run build:server",
     "start": "cross-env NODE_ENV=production node server/app.js",
+    "start-nodemon": "cross-env NODE_ENV=production nodemon server/app.js",
     "remove": "rimraf public && rimraf server-build",
     "hint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "hint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
@@ -28,6 +29,7 @@
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
+    "koa-session": "^5.8.1",
     "sha1": "^1.1.1",
     "vue": "^2.5.16",
     "vue-meta": "^1.5.0",
